minesweeper: add rotating wallpapers

--- a/graphics/minesweeper/minesweeper.html
+++ b/graphics/minesweeper/minesweeper.html
@@ -3,9 +3,29 @@
 	<head>
 		<meta charset="UTF-8" />
         <link rel="stylesheet" href="./minesweeper.css" />
+
+        <script
+            src="https://code.jquery.com/jquery-3.7.1.min.js"
+            integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
+            crossorigin="anonymous">
+        </script>
 	</head>
 	<body>
-        <img src="./assets/wallpapers/bliss.jpg" id="wallpaper" />
+        <div id="wallpapers-container">
+            <img src="./assets/wallpapers/ascent.jpg" class="wallpaper">
+            <img src="./assets/wallpapers/autumn.jpg" class="wallpaper">
+            <img src="./assets/wallpapers/azul.jpg" class="wallpaper">
+            <img src="./assets/wallpapers/bliss.jpg" class="wallpaper showing">
+            <img src="./assets/wallpapers/follow.jpg" class="wallpaper">
+            <img src="./assets/wallpapers/friend.jpg" class="wallpaper">
+            <img src="./assets/wallpapers/radiance.jpg" class="wallpaper">
+            <img src="./assets/wallpapers/redmoondesert.jpg" class="wallpaper">
+            <img src="./assets/wallpapers/stonehenge.jpg" class="wallpaper">
+            <img src="./assets/wallpapers/tulips.jpg" class="wallpaper">
+            <img src="./assets/wallpapers/vortecspace.jpg" class="wallpaper">
+            <img src="./assets/wallpapers/wind.jpg" class="wallpaper">
+        </div>
+
         <img src="./assets/main-bg.png" class="bg" />
 
         <div class="board"></div>
