minesweeper: fix first wallpaper

--- a/graphics/minesweeper/minesweeper.html
+++ b/graphics/minesweeper/minesweeper.html
@@ -12,10 +12,10 @@
 	</head>
 	<body>
         <div id="wallpapers-container">
-            <img src="./assets/wallpapers/ascent.jpg" class="wallpaper">
+            <img src="./assets/wallpapers/ascent.jpg" class="showing wallpaper">
             <img src="./assets/wallpapers/autumn.jpg" class="wallpaper">
             <img src="./assets/wallpapers/azul.jpg" class="wallpaper">
-            <img src="./assets/wallpapers/bliss.jpg" class="wallpaper showing">
+            <img src="./assets/wallpapers/bliss.jpg" class="wallpaper">
             <img src="./assets/wallpapers/follow.jpg" class="wallpaper">
             <img src="./assets/wallpapers/friend.jpg" class="wallpaper">
             <img src="./assets/wallpapers/radiance.jpg" class="wallpaper">
